Fix Copy Link Location.  The tooltip timer was causing the document's popupNode to get nulled out.  We don't actually need to set popupNode at all for tooltips, we have tooltipNode for that.  Modified the menu popup code to use tooltipNode for tooltips.  Bug 143607.  r=hewitt, sr=jst.